--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -182,6 +182,9 @@ a {
     color: rgb(0, 119, 255);
 
     text-decoration: underline;
+    &.nav-link{
+      text-decoration: none;
+    }
   }
   &.inherit {
     color: inherit;
@@ -304,15 +307,18 @@ button.MuiButtonBase-root:focus {
   /* border: none; */
   &.btn-danger {
     background: $red !important;
+    color: white !important;
     &:hover {
-      background: rgb(187, 3, 3) !important;
+      color: black !important;
     }
   }
   &.btn-primary-outline {
     background-color: transparent;
     border: 1px solid #2E2E2E;
+    color: white !important;
     &:hover {
       border: 1px solid #D95D39;
+      
       i {
         color: white;
       }
@@ -322,9 +328,9 @@ button.MuiButtonBase-root:focus {
       background: $black;
       border-color: "#D95D39";
       span {
-        color: #D95D39;
+        color: black;
       }
-      color: #D95D39 !important;
+      color: black !important;
     }
   }
 }
@@ -1834,6 +1840,9 @@ small {
 }
 
 .card_support {
+  label{
+    font-weight: 500;
+  }
   input{
     padding: 10px 12px;
     border: 1px solid #ced4da;
@@ -1850,7 +1859,28 @@ small {
     }
   }
   .textarea{
+    .form-control {
+      box-shadow: none !important;
+    }
     padding: 10px 12px;
+    border: 1px solid #ced4da;
+    border-radius: 8px;
+    box-shadow: none !important;
+    background-color: white !important;
+    height: 80px;
+    outline: none !important;
+    transition: border-color 0.3s, box-shadow 0.3s;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+    &:focus{
+      border-color: #66b2ff;
+      box-shadow: 0 0 0 4px rgba(102, 178, 255, 0.3); /* sfumatura azzurra */
+    }
+  }
+  select{
+    padding: 8px 12px !important;
+    text-indent: 0;   
     border: 1px solid #ced4da;
     border-radius: 8px;
     background-color: white;
@@ -4030,7 +4060,8 @@ mark {
 .page-container-new {
   padding-left: 80px;
   padding-right: 80px;
-  padding-top: 20px;
+  padding-top: 24px;
+  padding-bottom: 24px;
   flex-basis: 0;
   flex-grow: 1;
   max-width: 100%;
