--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,6 +51,14 @@ header nav a:hover {
   transition: color 0.2s ease-in-out;
 }
 
+.navLink {
+  &:hover{
+    color: #AEC60D !important;
+    transition: color 0.2s ease-in-out;
+  }
+  
+}
+
 
 
 .MuiBadge-anchorOriginTopRightRectangle.MuiBadge-invisible {
@@ -1844,6 +1852,13 @@ small {
     font-weight: 500;
   }
   input{
+    &:disabled {
+      background-color: #f5f5f5;  
+      color: #666;                
+      cursor: not-allowed;        
+      border: 1px solid #ccc;    
+      opacity: 1;                 
+    }
     padding: 10px 12px;
     border: 1px solid #ced4da;
     border-radius: 8px;
@@ -1859,6 +1874,13 @@ small {
     }
   }
   .textarea{
+    &:disabled {
+      background-color: #f5f5f5;  
+      color: #666;                
+      cursor: not-allowed;        
+      border: 1px solid #ccc;    
+      opacity: 1;                 
+    }
     .form-control {
       box-shadow: none !important;
     }
@@ -1879,6 +1901,13 @@ small {
     }
   }
   select{
+    &:disabled {
+      background-color: #f5f5f5;  
+      color: #666;                
+      cursor: not-allowed;        
+      border: 1px solid #ccc;    
+      opacity: 1;                 
+    }
     padding: 8px 12px !important;
     text-indent: 0;   
     border: 1px solid #ced4da;
