--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1659,6 +1659,10 @@ small {
   margin-top: 32px !important;
 }
 
+.gap-16{
+  gap : 16px !important;
+}
+
 .w-44 {
   width: 44px !important;
 }
@@ -2391,6 +2395,7 @@ input[type="checkbox"] {
 }
 
 .button_header_inner {
+  background: transparent !important;
   padding: 12px;
   line-height: 16px;
   border: 1px solid rgba(204, 204, 201, 1);
