--- a/src/components/atoms/Button/button.scss
+++ b/src/components/atoms/Button/button.scss
@@ -17,4 +17,26 @@
             }
         }
     }
+    &.rosso{
+        background: red;
+        border: 1px solid #3A3A3A;
+        font-size: 16px;
+        color: white;
+        &:hover {
+            color: #3A3A3A;
+            background: red;
+            border: 1px solid #3A3A3A;
+        }
+    }
+    &.grigio{
+        background: grey;
+        border: 1px solid #3A3A3A;
+        font-size: 16px;
+        color: white;
+        &:hover {
+            color: #3A3A3A;
+            background: grey;
+            border: 1px solid #3A3A3A;
+        }
+    }
 }
